needRefreshCachedSize() was changed.

--- a/lazycontainer/pom.xml
+++ b/lazycontainer/pom.xml
@@ -17,6 +17,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-server</artifactId>
             <version>7.1.1</version>
@@ -65,5 +71,5 @@
             </plugin>
         </plugins>
     </build>
-    
+
 </project>
